@@ -108,7 +108,7 @@ BOOL MultiFileReader::IsFileInvalid()
 
 HRESULT MultiFileReader::GetFileSize(__int64 *pStartPosition, __int64 *pLength)
 {
-	RefreshTSBufferFile();
+//	RefreshTSBufferFile();
 	CheckPointer(pStartPosition,E_POINTER);
 	CheckPointer(pLength,E_POINTER);
 	*pStartPosition = m_startPosition;
