@@ -26,13 +26,16 @@
 #include <streams.h>
 #include "TSBuffer.h"
 #include <crtdbg.h>
+#include <math.h>
 
 CTSBuffer::CTSBuffer(CTSFileSourceClock *pClock)
 {
 	m_pFileReader = NULL;
 	m_pClock = pClock;
 	m_lItemOffset = 0;
-	m_lTSBufferItemSize = 800 * 1000;//188*1000;
+	m_lTSBufferItemSize = 188000;
+	debugcount = 0;
+	m_lbuflen = 1;
 	Clear();
 }
 
@@ -48,6 +51,7 @@ void CTSBuffer::SetFileReader(FileReader *pFileReader)
 
 void CTSBuffer::Clear()
 {
+	CAutoLock BufferLock(&m_BufferLock);
 	std::vector<BYTE *>::iterator it = m_Array.begin();
 	for ( ; it != m_Array.end() ; it++ )
 	{
@@ -56,10 +60,12 @@ void CTSBuffer::Clear()
 	m_Array.clear();
 
 	m_lItemOffset = 0;
+	m_lbuflen = 1;
 }
 
 long CTSBuffer::Count()
 {
+	CAutoLock BufferLock(&m_BufferLock);
 	long bytesAvailable = 0;
 	long itemCount = m_Array.size();
 
@@ -71,11 +77,28 @@ long CTSBuffer::Count()
 	return bytesAvailable;
 }
 
+HRESULT CTSBuffer::UpdateBuffer()
+{
+	CAutoLock BufferLock(&m_BufferLock);
+	long bytesAvailable = Count();
+	if (bytesAvailable < m_lTSBufferItemSize*m_lbuflen)
+	{
+		long itemCount = m_Array.size();
+		if (itemCount > 0)
+		{
+			Require(m_lTSBufferItemSize*m_lbuflen);
+		}
+	}
+
+	return S_OK;
+}
+
 HRESULT CTSBuffer::Require(long nBytes)
 {
 	if (!m_pFileReader)
 		return E_POINTER;
 
+	CAutoLock BufferLock(&m_BufferLock);
 	long bytesAvailable = Count();
 
 	while (nBytes > bytesAvailable)
@@ -84,10 +107,12 @@ HRESULT CTSBuffer::Require(long nBytes)
 		ULONG ulBytesRead = 0;
 
 		__int64 currPosition = m_pFileReader->GetFilePointer();
+//PrintLongLong("Require-GetFilePointer", currPosition);
 		HRESULT hr = m_pFileReader->Read(newItem, m_lTSBufferItemSize, &ulBytesRead);
 		if (FAILED(hr)){
 
 			delete[] newItem;
+			m_lbuflen = 1;
 			return hr;
 		}
 
@@ -113,8 +138,13 @@ HRESULT CTSBuffer::Require(long nBytes)
 					}
 					else
 					{
-						Sleep(200);
-						m_pClock->SetClockPause(TRUE); //cold start
+						if (!count)
+						{
+							delete[] newItem;
+							m_lbuflen = 1;
+							return hr;
+						}
+						Sleep(10);
 					}
 
 					ULONG ulNextBytesRead = 0;				
@@ -123,26 +153,35 @@ HRESULT CTSBuffer::Require(long nBytes)
 					if (FAILED(hr) && !count){
 
 						delete[] newItem;
+						m_lbuflen = 1;
 						return hr;
 					}
 
 					if (((ulNextBytesRead == 0) | (ulNextBytesRead == ulBytesRead)) && !count){
 
 						delete[] newItem;
+						m_lbuflen = 1;
 						return E_FAIL;
 					}
 
 					ulBytesRead = ulNextBytesRead;
 				}
-//				m_pClock->SetPrivateTimePause(1); //cold start
 
 			}
 			else
 			{
 				delete[] newItem;
+				m_lbuflen = 1;
 				return E_FAIL;
 			}
+			m_lbuflen--;
+			m_pClock->SetClockPause(TRUE);
 		}
+		else if (m_lbuflen < 8)
+			m_lbuflen++;
+
+		if(m_lbuflen < 1)
+			m_lbuflen = 1;
 
 		m_Array.push_back(newItem);
 		bytesAvailable += m_lTSBufferItemSize;
@@ -155,6 +194,7 @@ HRESULT CTSBuffer::DequeFromBuffer(BYTE *pbData, long lDataLength)
 	if (!m_pFileReader)
 		return E_POINTER;
 
+	CAutoLock BufferLock(&m_BufferLock);
 	HRESULT hr = Require(lDataLength);
 	if (FAILED(hr))
 		return hr;
@@ -177,7 +217,7 @@ HRESULT CTSBuffer::DequeFromBuffer(BYTE *pbData, long lDataLength)
 			m_lItemOffset -= m_lTSBufferItemSize;	//should result in zero
 		}
 	}
-
+//PrintLongLong("DequeFromBuffer-Count", Count());
 	return S_OK;
 }
 
@@ -186,6 +226,7 @@ HRESULT CTSBuffer::ReadFromBuffer(BYTE *pbData, long lDataLength, long lOffset)
 	if (!m_pFileReader)
 		return E_POINTER;
 
+	CAutoLock BufferLock(&m_BufferLock);
 	HRESULT hr = Require(lOffset + lDataLength);
 	if (FAILED(hr))
 		return hr;
@@ -206,12 +247,34 @@ HRESULT CTSBuffer::ReadFromBuffer(BYTE *pbData, long lDataLength, long lOffset)
 		BYTE *item = m_Array.at(itemIndex);
 
 		long copyLength = min(m_lTSBufferItemSize-lOffset, lDataLength-bytesWritten);
-		memcpy(pbData + bytesWritten, item + lOffset, copyLength);
+		{
+			CAutoLock BufferLock(&m_BufferLock);
+			memcpy(pbData + bytesWritten, item + lOffset, copyLength);
 
-		bytesWritten += copyLength;
-		lOffset += copyLength;
+			bytesWritten += copyLength;
+			lOffset += copyLength;
+		}
 	}
 
 	return S_OK;
 }
 
+void CTSBuffer::PrintLongLong(LPCTSTR lstring, __int64 value)
+{
+	TCHAR sz[100];
+	double dVal = value;
+	double len = log10(dVal);
+	int pos = len;
+	sz[pos+1] = '\0';
+	while (pos >= 0)
+	{
+		int val = value % 10;
+		sz[pos] = '0' + val;
+		value /= 10;
+		pos--;
+	}
+	TCHAR szout[100];
+	wsprintf(szout, TEXT("%05i - %s %s\n"), debugcount, lstring, sz);
+	::OutputDebugString(szout);
+	debugcount++;
+}
